--- a/roles/openshift_node/tasks/storage_plugins/ceph.yml
+++ b/roles/openshift_node/tasks/storage_plugins/ceph.yml
@@ -1,12 +1,3 @@
 ---
 - name: Install Ceph storage plugin dependencies
-  yum:
-    pkg: ceph-common
-    state: installed
-  when: ansible_pkg_mgr == "yum"
-
-- name: Install Ceph storage plugin dependencies
-  dnf:
-    pkg: ceph-common
-    state: installed
-  when: ansible_pkg_mgr == "dnf"
+  action: "{{ ansible_pkg_mgr }} name=ceph-common state=present"
