--- a/roles/openshift_storage_nfs_lvm/tasks/nfs.yml
+++ b/roles/openshift_storage_nfs_lvm/tasks/nfs.yml
@@ -1,12 +1,7 @@
 ---
 - name: Install NFS server
-  yum: name=nfs-utils state=present
-  when: ansible_pkg_mgr == "yum"
-
-- name: Install NFS server
-  dnf: name=nfs-utils state=present
-  when: ansible_pkg_mgr == "dnf"
-
+  action: "{{ ansible_pkg_mgr }} name=nfs-utils state=present"
+  
 - name: Start rpcbind
   service: name=rpcbind state=started enabled=yes
 
