--- a/roles/openshift_repos/tasks/main.yaml
+++ b/roles/openshift_repos/tasks/main.yaml
@@ -11,30 +11,21 @@
     that: openshift.common.deployment_type in known_openshift_deployment_types
 
 - name: Ensure libselinux-python is installed
-  yum:
-    pkg: libselinux-python
-    state: present
-  when: ansible_pkg_mgr == "yum"
-
-- name: Ensure libselinux-python is installed
-  dnf:
-    pkg: libselinux-python
-    state: present
-  when: ansible_pkg_mgr == "dnf"
+  action: "{{ ansible_pkg_mgr }} name=libselinux-python state=present"
 
 - name: Create any additional repos that are defined
   template:
     src: yum_repo.j2
     dest: /etc/yum.repos.d/openshift_additional.repo
   when: openshift_additional_repos | length > 0
-  notify: refresh yum cache
+  notify: refresh cache
 
 - name: Remove the additional repos if no longer defined
   file:
     dest: /etc/yum.repos.d/openshift_additional.repo
     state: absent
   when: openshift_additional_repos | length == 0
-  notify: refresh yum cache
+  notify: refresh cache
 
 - name: Remove any yum repo files for other deployment types RHEL/CentOS
   file:
@@ -44,7 +35,7 @@
   - '*/repos/*'
   when: not (item | search("/files/" ~ openshift_deployment_type ~ "/repos")) and
         (ansible_os_family == "RedHat" and ansible_distribution != "Fedora")
-  notify: refresh yum cache
+  notify: refresh cache
 
 - name: Remove any yum repo files for other deployment types Fedora
   file:
@@ -54,24 +45,24 @@
   - '*/repos/*'
   when: not (item | search("/files/fedora-" ~ openshift_deployment_type ~ "/repos")) and
         (ansible_distribution == "Fedora")
-  notify: refresh dnf cache
+  notify: refresh cache
 
 - name: Configure gpg keys if needed
   copy: src={{ item }} dest=/etc/pki/rpm-gpg/
   with_fileglob:
   - "{{ openshift_deployment_type }}/gpg_keys/*"
-  notify: refresh yum cache
+  notify: refresh cache
 
 - name: Configure yum repositories RHEL/CentOS
   copy: src={{ item }} dest=/etc/yum.repos.d/
   with_fileglob:
   - "{{ openshift_deployment_type }}/repos/*"
-  notify: refresh yum cache
+  notify: refresh cache
   when: (ansible_os_family == "RedHat" and ansible_distribution != "Fedora")
 
 - name: Configure yum repositories Fedora
   copy: src={{ item }} dest=/etc/yum.repos.d/
   with_fileglob:
   - "fedora-{{ openshift_deployment_type }}/repos/*"
-  notify: refresh dnf cache
+  notify: refresh cache
   when: (ansible_distribution == "Fedora")
