--- a/roles/os_env_extras/tasks/main.yaml
+++ b/roles/os_env_extras/tasks/main.yaml
@@ -12,13 +12,4 @@
     dest: /root/.vimrc
 
 - name: Bash Completion
-  yum:
-    pkg: bash-completion
-    state: installed
-  when: ansible_pkg_mgr == "yum"
-
-- name: Bash Completion
-  dnf:
-    pkg: bash-completion
-    state: installed
-  when: ansible_pkg_mgr == "dnf"
+  action: "{{ ansible_pkg_mgr }} name=bash-completion state=present"
