Fixes typo when setting facts to record whether master/node has been restarted already, to decide whether notify handler should do so or not. Currently, this causes random SDN network setup failures as openshift-node gets restarted while the setup script is running, and the subsequent start fails to configure the SDN because it thinks it's already done.

--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -131,4 +131,4 @@
   register: start_result
 
 - set_fact:
-    node_service_status_changed = start_result | changed
+    node_service_status_changed: start_result | changed
