--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -91,10 +91,20 @@
   when: openshift.common.is_containerized | bool
   register: docker_images
 
-- name: Pull required docker image
+- name: Pull master image
   command: >
     docker pull {{ openshift.master.master_image }}
   when: openshift.common.is_containerized | bool and openshift.master.master_image not in docker_images.stdout
+  
+- name: Wait for master image
+  command: >
+      docker images
+  register: docker_images
+  until: openshift.master.master_image in docker_images.stdout
+  retries: 30
+  delay: 10
+  changed_when: false
+  when: openshift.common.is_containerized | bool
 
 - name: Install Master docker service file
   template:
