fix logic to tolerate occasional failures

--- a/roles/os_zabbix/vars/template_docker.yml
+++ b/roles/os_zabbix/vars/template_docker.yml
@@ -68,7 +68,7 @@ g_template_docker:
     priority: high
 
   - name: 'docker.container.dns.resolution failed on {HOST.NAME}'
-    expression: '{Template Docker:docker.container.dns.resolution.max(#3)}>0'
+    expression: '{Template Docker:docker.container.dns.resolution.min(#3)}>0'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_docker_dns.asciidoc'
     priority: high
 
