add item/trigger for dns tests on all currently running containers

--- a/roles/os_zabbix/vars/template_docker.yml
+++ b/roles/os_zabbix/vars/template_docker.yml
@@ -17,6 +17,11 @@ g_template_docker:
     - Docker Daemon
     value_type: int
 
+  - key: docker.container.existing.dns.resolution.failed
+    applications:
+    - Docker Daemon
+    value_type: int
+
   - key: docker.storage.is_loopback
     applications:
     - Docker Storage
@@ -69,6 +74,11 @@ g_template_docker:
 
   - name: 'docker.container.dns.resolution failed on {HOST.NAME}'
     expression: '{Template Docker:docker.container.dns.resolution.min(#3)}>0'
+    url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_docker_dns.asciidoc'
+    priority: high
+
+  - name: 'docker.container.existing.dns.resolution.failed on {HOST.NAME}'
+    expression: '{Template Docker:docker.container.existing.dns.resolution.failed.min(#3)}>0'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_docker_dns.asciidoc'
     priority: high
 
