change dns triggers to average

--- a/roles/os_zabbix/vars/template_docker.yml
+++ b/roles/os_zabbix/vars/template_docker.yml
@@ -75,12 +75,12 @@ g_template_docker:
   - name: 'docker.container.dns.resolution failed on {HOST.NAME}'
     expression: '{Template Docker:docker.container.dns.resolution.min(#3)}>0'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_docker_dns.asciidoc'
-    priority: high
+    priority: average
 
   - name: 'docker.container.existing.dns.resolution.failed on {HOST.NAME}'
     expression: '{Template Docker:docker.container.existing.dns.resolution.failed.min(#3)}>0'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_docker_dns.asciidoc'
-    priority: high
+    priority: average
 
   - name: 'Docker storage is using LOOPBACK on {HOST.NAME}'
     expression: '{Template Docker:docker.storage.is_loopback.last()}<>0'
