Cleanup and fixes for cluster_id change
- Move debug_level into vars.yml and byo inventory
- change variables in cluster_hosts.yml to be g_* and update playbooks to use
  those values directly instead of setting them indirectly
- added a new g_all_hosts entry in cluster_hosts to use in the update playbook
  instead of unioning all host types within the playbook
- added a cluster_hosts.yml for the byo playbook

--- a/playbooks/byo/openshift-cluster/upgrades/v3_0_minor/upgrade.yml
+++ b/playbooks/byo/openshift-cluster/upgrades/v3_0_minor/upgrade.yml
@@ -1,5 +1,7 @@
 ---
 - include: ../../../../common/openshift-cluster/upgrades/v3_0_minor/upgrade.yml
+  vars_files:
+  - ../../../../byo/openshift-cluster/cluster_hosts.yml
   vars:
     g_etcd_hosts: "{{ groups.etcd | default([]) }}"
     g_master_hosts: "{{ groups.masters | default([]) }}"
