--- a/playbooks/gce/openshift-cluster/cluster_hosts.yml
+++ b/playbooks/gce/openshift-cluster/cluster_hosts.yml
@@ -1,20 +1,19 @@
 ---
-etcd_hosts:   "{{ (groups['tag_host-type-etcd']|default([]))
-                   | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
-                   | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
+g_etcd_hosts:   "{{ (groups['tag_host-type-etcd']|default([]))
+                     | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
+                     | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
 
-lb_hosts:     "{{ (groups['tag_host-type-lb']|default([]))
-                   | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
-                   | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
+g_lb_hosts:     "{{ (groups['tag_host-type-lb']|default([]))
+                     | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
+                     | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
 
-master_hosts: "{{ (groups['tag_host-type-master']|default([]))
-                   | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
-                   | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
+g_master_hosts: "{{ (groups['tag_host-type-master']|default([]))
+                     | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
+                     | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
 
-node_hosts:   "{{ (groups['tag_host-type-node']|default([]))
-                   | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
-                   | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
+g_node_hosts:   "{{ (groups['tag_host-type-node']|default([]))
+                     | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
+                     | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
 
-nfs_hosts:   "{{ (groups['tag_host-type_nfs']|default([]))
-                  | intersect((groups['tag_env_' ~ cluster_id]|default([]))) }}"
-
+g_all_hosts:    "{{ g_master_hosts | union(g_node_hosts) | union(g_etcd_hosts)
+                    | union(g_lb_hosts) | default([]) }}"
