--- a/playbooks/gce/openshift-cluster/config.yml
+++ b/playbooks/gce/openshift-cluster/config.yml
@@ -1,39 +1,16 @@
 ---
 # TODO: fix firewall related bug with GCE and origin, since GCE is overriding
 # /etc/sysconfig/iptables
-
-- hosts: localhost
-  gather_facts: no
-  connection: local
-  become: no
-  vars_files:
-  - vars.yml
-  - cluster_hosts.yml
-  tasks:
-  - set_fact:
-      g_etcd_hosts: "{{ etcd_hosts }}"
-      g_master_hosts: "{{ master_hosts }}"
-      g_node_hosts: "{{ node_hosts }}"
-      g_lb_hosts: "{{ lb_hosts }}"
-      g_nfs_hosts: "{{ nfs_hosts }}"
-      g_ssh_user_tmp: "{{ deployment_vars[deployment_type].ssh_user }}"
-      g_sudo_tmp: "{{ deployment_vars[deployment_type].sudo }}"
-      use_sdn: "{{ do_we_use_openshift_sdn }}"
-      sdn_plugin: "{{ sdn_network_plugin }}"
-
 - include: ../../common/openshift-cluster/config.yml
+  vars_files:
+  - ../../gce/openshift-cluster/vars.yml
+  - ../../gce/openshift-cluster/cluster_hosts.yml
   vars:
-    g_etcd_hosts:   "{{ hostvars.localhost.g_etcd_hosts }}"
-    g_master_hosts: "{{ hostvars.localhost.g_master_hosts }}"
-    g_node_hosts:   "{{ hostvars.localhost.g_node_hosts }}"
-    g_lb_hosts:     "{{ hostvars.localhost.g_lb_hosts }}"
-    g_nfs_hosts:    "{{ hostvars.localhost.g_nfs_hosts }}"
-    g_ssh_user: "{{ hostvars.localhost.g_ssh_user_tmp }}"
-    g_sudo: "{{ hostvars.localhost.g_sudo_tmp }}"
+    g_ssh_user: "{{ deployment_vars[deployment_type].ssh_user }}"
+    g_sudo: "{{ deployment_vars[deployment_type].sudo }}"
     g_nodeonmaster: true
     openshift_cluster_id: "{{ cluster_id }}"
-    openshift_debug_level: 2
+    openshift_debug_level: "{{ debug_level }}"
     openshift_deployment_type: "{{ deployment_type }}"
     openshift_hostname: "{{ gce_private_ip }}"
-    openshift_use_openshift_sdn: "{{ hostvars.localhost.use_sdn  }}"
-    os_sdn_network_plugin_name: "{{ hostvars.localhost.sdn_plugin }}"
+    openshift_use_openshift_sdn: "{{ do_we_use_openshift_sdn }}"
