--- a/playbooks/openstack/openshift-cluster/config.yml
+++ b/playbooks/openstack/openshift-cluster/config.yml
@@ -1,31 +1,13 @@
-- hosts: localhost
-  gather_facts: no
-  become: no
-  connection: local
-  vars_files:
-  - vars.yml
-  - cluster_hosts.yml
-  tasks:
-  - set_fact:
-      g_ssh_user_tmp: "{{ deployment_vars[deployment_type].ssh_user }}"
-      g_sudo_tmp: "{{ deployment_vars[deployment_type].sudo }}"
-      g_etcd_hosts:   "{{ etcd_hosts }}"
-      g_lb_hosts:     "{{ lb_hosts }}"
-      g_master_hosts: "{{ master_hosts }}"
-      g_node_hosts:   "{{ node_hosts }}"
-      g_nfs_hosts:   "{{ nfs_hosts }}"
-
-
+---
 - include: ../../common/openshift-cluster/config.yml
+  vars_files:
+  - ../../openstack/openshift-cluster/vars.yml
+  - ../../openstack/openshift-cluster/cluster_hosts.yml
   vars:
-    g_etcd_hosts:   "{{ hostvars.localhost.g_etcd_hosts }}"
-    g_lb_hosts:     "{{ hostvars.localhost.g_lb_hosts }}"
-    g_master_hosts: "{{ hostvars.localhost.g_master_hosts }}"
-    g_node_hosts:   "{{ hostvars.localhost.g_node_hosts }}"
-    g_nfs_hosts:    "{{ hostvars.localhost.g_nfs_hosts }}"
-    g_ssh_user: "{{ hostvars.localhost.g_ssh_user_tmp }}"
-    g_sudo: "{{ hostvars.localhost.g_sudo_tmp }}"
+    g_nodeonmaster: true
+    g_ssh_user: "{{ deployment_vars[deployment_type].ssh_user }}"
+    g_sudo: "{{ deployment_vars[deployment_type].sudo }}"
     openshift_cluster_id: "{{ cluster_id }}"
-    openshift_debug_level: 2
+    openshift_debug_level: "{{ debug_level }}"
     openshift_deployment_type: "{{ deployment_type }}"
     openshift_hostname: "{{ ansible_default_ipv4.address }}"
