Fix image pull logic
For now we require that the tag be specified otherwise the image pull process
may not work properly.

--- a/roles/openshift_cli/tasks/main.yml
+++ b/roles/openshift_cli/tasks/main.yml
@@ -9,8 +9,8 @@
   when: not openshift.common.is_containerized | bool
   
 - name: List Docker images
-  command: >
-    docker images
+  shell: >
+    docker images | awk '{  print $1 "\:" $2 }'
   register: docker_images
   
 - name: Pull CLI Image
@@ -19,8 +19,8 @@
   when: openshift.common.is_containerized | bool and openshift.common.cli_image not in docker_images.stdout
   
 - name: Wait for CLI image
-  command: >
-      docker images
+  shell: >
+      docker images | awk '{  print $1 "\:" $2 }'
   register: docker_images
   until: openshift.common.cli_image in docker_images.stdout
   retries: 30
