--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -12,7 +12,7 @@
   when: not openshift.common.is_containerized | bool
 
 - name: Get docker images
-  command: docker images
+  shell: docker images | awk '{  print $1 "\:" $2 }'
   changed_when: false
   when: openshift.common.is_containerized | bool
   register: docker_images
@@ -22,8 +22,8 @@
   when: openshift.common.is_containerized | bool and openshift.etcd.etcd_image not in docker_images.stdout
   
 - name: Wait for etcd image
-  command: >
-      docker images
+  shell: >
+      docker images | awk '{  print $1 "\:" $2 }'
   register: docker_images
   until: openshift.etcd.etcd_image in docker_images.stdout
   retries: 30
