--- a/roles/openshift_master_ca/tasks/main.yml
+++ b/roles/openshift_master_ca/tasks/main.yml
@@ -14,15 +14,24 @@
     state: directory
 
 - name: Get docker images
-  command: docker images
+  shell: docker images | awk '{  print $1 "\:" $2 }'
   changed_when: false
   when: openshift.common.is_containerized | bool
   register: docker_images
 
-- name: Pull required docker image
+- name: Pull cli image
   command: >
     docker pull {{ openshift.common.cli_image }}
   when: openshift.common.is_containerized | bool and openshift.common.cli_image not in docker_images.stdout
+  
+- name: Wait for cli_image
+  shell: docker images | awk '{  print $1 "\:" $2 }'
+  register: docker_images
+  until: openshift.common.cli_image in docker_images.stdout
+  retries: 30
+  delay: 10
+  changed_when: false
+  when: openshift.common.is_containerized | bool
 
 - name: Create the master certificates if they do not already exist
   command: >
