Fix error in byo cluster_hosts.yml

--- a/playbooks/aws/openshift-cluster/cluster_hosts.yml
+++ b/playbooks/aws/openshift-cluster/cluster_hosts.yml
@@ -16,7 +16,7 @@ g_node_hosts:   "{{ (groups['tag_host-type_node']|default([]))
                      | intersect((groups['tag_environment_' ~ cluster_env]|default([]))) }}"
 
 g_nfs_hosts:    "{{ (groups['tag_host-type_nfs']|default([]))
-                   | intersect((groups['tag_env_' ~ cluster_id]|default([]))) }}"
+                   | intersect((groups['tag_environment_' ~ cluster_id]|default([]))) }}"
 
 g_all_hosts:    "{{ g_master_hosts | union(g_node_hosts) | union(g_etcd_hosts)
                     | union(g_lb_hosts) | default([]) }}"
