--- a/playbooks/byo/openshift-cluster/cluster_hosts.yml
+++ b/playbooks/byo/openshift-cluster/cluster_hosts.yml
@@ -3,9 +3,11 @@ g_etcd_hosts:   "{{ groups.etcd | default([]) }}"
 
 g_lb_hosts:     "{{ groups.lb | default([]) }}"
 
-g_master_hosts: "{{ groups.master | default([]) }}"
+g_master_hosts: "{{ groups.masters | default([]) }}"
 
-g_node_hosts:   "{{ groups.node | default([]) }}"
+g_node_hosts:   "{{ groups.nodes | default([]) }}"
+
+g_nfs_hosts:   "{{ groups.nfs | default([]) }}"
 
 g_all_hosts:    "{{ g_master_hosts | union(g_node_hosts) | union(g_etcd_hosts)
                     | union(g_lb_hosts) | default([]) }}"
