--- a/playbooks/gce/openshift-cluster/cluster_hosts.yml
+++ b/playbooks/gce/openshift-cluster/cluster_hosts.yml
@@ -15,5 +15,8 @@ g_node_hosts:   "{{ (groups['tag_host-type-node']|default([]))
                      | intersect((groups['tag_clusterid-' ~ cluster_id]|default([])))
                      | intersect((groups['tag_environment-' ~ cluster_env]|default([]))) }}"
 
+g_nfs_hosts:    "{{ (groups['tag_host-type-nfs']|default([]))
+                   | intersect((groups['tag_environment-' ~ cluster_id]|default([]))) }}"
+
 g_all_hosts:    "{{ g_master_hosts | union(g_node_hosts) | union(g_etcd_hosts)
                     | union(g_lb_hosts) | default([]) }}"
