changed_when: false in a few places where we're just gathering info

--- a/playbooks/adhoc/uninstall.yml
+++ b/playbooks/adhoc/uninstall.yml
@@ -17,6 +17,7 @@
       shell: ls /run/ostree-booted
       ignore_errors: yes
       failed_when: false
+      changed_when: false
       register: ostree_output
 
       # Since we're not calling openshift_facts we'll do this for now
