--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -135,4 +135,4 @@
   register: start_result
 
 - set_fact:
-    node_service_status_changed: start_result | changed
+    node_service_status_changed: "{{ start_result | changed }}"
