Add Nuage support to openshift ansible
Added variables

Made changes for node configuration

Add service restart logic to node

Fixed ansible syntax errors

Add cert and key info for nodes

Added active and standby controller ip configuration information

Uncommented the nuage sdn check

Changed ca_crt -> ca_cert

Added restarting of atomic openshift master

Removed service account dependencies

Fixes

Fixed the api server url

Removed redundant restart of atomic openshift master

Configure nuagekubemon on all of the master nodes

Restart master api and controllers as well on nuagekubemon installation

Converted plugin config into template

Add template for nuagekubemon

Removed uplink interface from vars

Able to copy cert keys

Uninstall default ovs

Add the kubemon template

Do not install rdo sdn rpms in case of nuage

Addressed latest review comments

Set the networkPluginName for nuage

--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -180,6 +180,8 @@
   - openshift_node
   - role: flannel
     when: openshift.common.use_flannel | bool
+  - role: nuage_node
+    when: openshift.common.use_nuage | bool
   - role: nickhammond.logrotate
   - role: fluentd_node
     when: openshift.common.use_fluentd | bool
