infra_node fixes
- openshift_master role update
  - infra_nodes was previously being set to num_infra, which is an integer
    value when using the cloud providers, added a new variable osm_infra_nodes
    that is expected to be a list of hosts

- Cloud provider config playbook updates
  - override openshift_router_selector for cloud providers to avoid using the
    default of 'region=infra' when deployment_type is not 'online'
  - Set osm_infra_nodes to g_infra_host for cloud providers

--- a/playbooks/aws/openshift-cluster/config.yml
+++ b/playbooks/aws/openshift-cluster/config.yml
@@ -12,3 +12,5 @@
     openshift_deployment_type: "{{ deployment_type }}"
     openshift_hostname: "{{ ec2_private_ip_address }}"
     openshift_public_hostname: "{{ ec2_ip_address }}"
+    openshift_router_selector: 'type=infra'
+    osm_infra_nodes: "{{ g_infra_hosts }}"
