GCE cloud provider updates
- fix overrides for gce machine type and gce machine image
- Update default image for origin
- Update default ssh user for origin and enterprise
- Remove old commented out code
- Remove wip and join_node playbooks
- Added add_nodes playbook which will now allow for using bin/cluster to add
  additional nodes
- Allow env override of ssh_user
- improve list playbook

--- a/playbooks/gce/openshift-cluster/add_nodes.yml
+++ b/playbooks/gce/openshift-cluster/add_nodes.yml
@@ -6,19 +6,12 @@
   gather_facts: no
   vars_files:
   - vars.yml
+  vars:
+    oo_extend_env: True
   tasks:
-  - fail: msg="Deployment type not supported for gce provider yet"
+  - fail:
+      msg: Deployment type not supported for gce provider yet
     when: deployment_type == 'enterprise'
-
-  - include: ../../common/openshift-cluster/tasks/set_master_launch_facts.yml
-  - include: tasks/launch_instances.yml
-    vars:
-      instances: "{{ master_names }}"
-      cluster: "{{ cluster_id }}"
-      type: "{{ k8s_type }}"
-      g_sub_host_type: "default"
-      gce_machine_type: "{{ lookup('env', 'gce_machine_master_type') | default(lookup('env', 'gce_machine_type'), true) }}"
-      gce_machine_image: "{{ lookup('env', 'gce_machine_master_image') | default(lookup('env', 'gce_machine_image'), true) }}"
 
   - include: ../../common/openshift-cluster/tasks/set_node_launch_facts.yml
     vars:
@@ -46,11 +39,5 @@
       gce_machine_type: "{{ lookup('env', 'gce_machine_node_type') | default(lookup('env', 'gce_machine_type'), true) }}"
       gce_machine_image: "{{ lookup('env', 'gce_machine_node_image') | default(lookup('env', 'gce_machine_image'), true) }}"
 
-  - add_host:
-      name: "{{ master_names.0 }}"
-      groups: service_master
-    when: master_names is defined and master_names.0 is defined
-
-- include: update.yml
-
+- include: scaleup.yml
 - include: list.yml
