--- a/playbooks/gce/openshift-cluster/list.yml
+++ b/playbooks/gce/openshift-cluster/list.yml
@@ -23,4 +23,4 @@
   gather_facts: no
   tasks:
   - debug:
-      msg: "private ip:{{ hostvars[inventory_hostname].gce_private_ip }}"
+      msg: "public ip: {{ hostvars[inventory_hostname].gce_public_ip }} private ip:{{ hostvars[inventory_hostname].gce_private_ip }}"
