v3_0_to_v3_1_upgrade: Install storage packages
Include the existing storage plugin configuration during an upgrade.

--- a/playbooks/common/openshift-cluster/upgrades/v3_0_to_v3_1/upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_0_to_v3_1/upgrade.yml
@@ -398,6 +398,9 @@
   - name: Ensure node service enabled
     service: name="{{ openshift.common.service_type }}-node" state=started enabled=yes
 
+  - name: Additional storage plugin configuration
+    include: ../../../../../roles/openshift_node/tasks/storage_plugins/main.yml
+
   - set_fact:
       node_update_complete: True
 
