Call attention to openshift_master_rolling_restart_mode variable in restart prompt.

--- a/playbooks/common/openshift-master/restart.yml
+++ b/playbooks/common/openshift-master/restart.yml
@@ -57,8 +57,10 @@
         Warning: Running playbook from a host that will be restarted!
         Press CTRL+C and A to abort playbook execution. You may
         continue by pressing ENTER but the playbook will stop
-        executing once this system restarts and services must be
-        manually verified.
+        executing after this system has been restarted and services
+        must be verified manually. To only restart services, set
+        openshift_master_rolling_restart_mode=services in host
+        inventory and relaunch the playbook.
     when: exists.stat.exists and openshift.common.rolling_restart_mode == 'system'
   - set_fact:
       current_host: "{{ exists.stat.exists }}"
